After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731567 - tcpserversrc: return GST_FLOW_FLUSHING instead of GST_FLOW_ERROR when accept is canceled
tcpserversrc: return GST_FLOW_FLUSHING instead of GST_FLOW_ERROR when accept ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-12 11:31 UTC by Michael Olbrich
Modified: 2014-06-13 08:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.13 KB, patch)
2014-06-12 11:31 UTC, Michael Olbrich
none Details | Review
updated patch (1.67 KB, patch)
2014-06-12 12:53 UTC, Michael Olbrich
committed Details | Review

Description Michael Olbrich 2014-06-12 11:31:55 UTC
Created attachment 278330 [details] [review]
patch

Canceling the accept happens when the source is shut down. This is not an
error and the GST_FLOW_ERROR causes problems when only part of the pipeline
is shut down.
Comment 1 Michael Olbrich 2014-06-12 12:53:50 UTC
Created attachment 278337 [details] [review]
updated patch

do the same in select.
Comment 2 Tim-Philipp Müller 2014-06-13 08:23:14 UTC
Thanks for the patch, pushed:

 commit 593a52a6563303f647d08171336aaf66f5664722
 Author: Michael Olbrich <m.olbrich@pengutronix.de>
 Date:   Thu Jun 12 13:23:29 2014 +0200

    tcpserversrc: return FLOW_FLUSHING instead of an error when accept/select is canceled
    
    Canceling the accept/select happens when the source is shut down. This is
    not an error and the GST_FLOW_ERROR causes problems when only part of the
    pipeline is shut down.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731567